[gd_scene load_steps=29 format=3 uid="uid://dxq6r1i15jboc"]

[ext_resource type="Script" uid="uid://khrkx3xyjf80" path="res://scripts/game.gd" id="1_oaba0"]
[ext_resource type="PackedScene" uid="uid://bh1nljnb8bek0" path="res://scenes/main_menu.tscn" id="2_0sl42"]
[ext_resource type="Script" uid="uid://d18b5kef2c43d" path="res://scripts/osc_sender.gd" id="2_8ool0"]
[ext_resource type="Script" uid="uid://dyxrhq0j3ug7n" path="res://scripts/midi_input_manager.gd" id="2_nepv3"]
[ext_resource type="PackedScene" uid="uid://d1b6ws7pv2dnd" path="res://scenes/song_select_menu.tscn" id="3_oaba0"]
[ext_resource type="PackedScene" uid="uid://ia775m2g5opk" path="res://scenes/drum_kit_editor.tscn" id="6_h3rex"]
[ext_resource type="PackedScene" uid="uid://bwli5jb25by71" path="res://scenes/song.tscn" id="6_m4url"]
[ext_resource type="PackedScene" uid="uid://51c68pu2yhx4" path="res://scenes/profile_editor.tscn" id="7_fedci"]
[ext_resource type="Script" uid="uid://bub7l12sfpwph" path="res://scripts/fps.gd" id="14_trtic"]
[ext_resource type="Script" uid="uid://jdxrqq1lbydj" path="res://scripts/audio_stream_player.gd" id="15_264po"]
[ext_resource type="Script" uid="uid://c3gdbg6cymqnb" path="res://scripts/hud.gd" id="22_37s47"]
[ext_resource type="Script" uid="uid://63d5qp1f3njm" path="res://scripts/tint_colored_check.gd" id="23_bt5mj"]
[ext_resource type="Script" uid="uid://33775qjnhkyc" path="res://scripts/lighting_fps_slider.gd" id="24_e1j6l"]
[ext_resource type="Script" uid="uid://diin2laee88ir" path="res://scripts/lighting_fps_label.gd" id="25_pl11u"]
[ext_resource type="Script" uid="uid://brvhispmbp5um" path="res://scripts/gem_selector.gd" id="26_bhx41"]
[ext_resource type="Script" uid="uid://dt3tcnfsjn8rf" path="res://scripts/lighting_alpha_slider.gd" id="26_js0lu"]
[ext_resource type="Script" uid="uid://ch73jenyqx13f" path="res://scripts/lighting_alpha_label.gd" id="27_gxtfn"]
[ext_resource type="Script" uid="uid://bhoimixv1dj6r" path="res://scripts/shift_x_slider.gd" id="27_qnb83"]
[ext_resource type="Script" uid="uid://cgdroqoontpn8" path="res://scripts/shift_x_label.gd" id="28_sww3w"]
[ext_resource type="Script" uid="uid://c6mnp3we75n6e" path="res://scripts/shift_y_slider.gd" id="29_wljb1"]
[ext_resource type="Script" uid="uid://cak8fvc3pyxn1" path="res://scripts/shift_y_label.gd" id="30_v2yb1"]
[ext_resource type="Script" uid="uid://dvogkqfs1wn8o" path="res://scripts/scale_slider.gd" id="31_js0lu"]
[ext_resource type="Script" uid="uid://l7qxi5ve6kfe" path="res://scripts/scale_label.gd" id="32_gxtfn"]
[ext_resource type="Script" uid="uid://d34muh853sgbe" path="res://scripts/file_dialog.gd" id="34_8ool0"]
[ext_resource type="Script" uid="uid://bcajro5jgaatj" path="res://scripts/tint_alpha_slider.gd" id="42_05nbr"]
[ext_resource type="Script" uid="uid://bieoqtck66nji" path="res://scripts/tint_alpha_label.gd" id="43_0sl42"]
[ext_resource type="Script" uid="uid://biwux207uf71g" path="res://scripts/blend_mode_selector.gd" id="43_458eo"]
[ext_resource type="Script" uid="uid://cktscbe6hgjvf" path="res://scripts/reload_gems_button.gd" id="44_0sl42"]

[node name="Game" type="Node2D"]
script = ExtResource("1_oaba0")

[node name="MainMenu" parent="." instance=ExtResource("2_0sl42")]

[node name="SongSelectMenu" parent="." instance=ExtResource("3_oaba0")]

[node name="Song" parent="." instance=ExtResource("6_m4url")]

[node name="DrumKitEditor" parent="." instance=ExtResource("6_h3rex")]

[node name="ProfileEditor" parent="." instance=ExtResource("7_fedci")]

[node name="OSCSender" type="Node" parent="."]
script = ExtResource("2_8ool0")

[node name="MIDIInputManager" type="Node" parent="."]
script = ExtResource("2_nepv3")

[node name="AudioManager" type="Node" parent="."]

[node name="SongAudioPlayer" type="AudioStreamPlayer" parent="AudioManager"]
script = ExtResource("15_264po")

[node name="FPS" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("14_trtic")

[node name="DebugHUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("22_37s47")

[node name="Background" type="ColorRect" parent="DebugHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.194178, 0.281254, 0.148787, 1)

[node name="TintColoredCheck" type="CheckBox" parent="DebugHUD"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "Use brass-colored cymbal tints?"
script = ExtResource("23_bt5mj")

[node name="LightingFPSSlider" type="HSlider" parent="DebugHUD"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("24_e1j6l")

[node name="LightingFPSLabel" type="Label" parent="DebugHUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("25_pl11u")

[node name="LightingAlphaSlider" type="HSlider" parent="DebugHUD"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("26_js0lu")

[node name="LightingAlphaLabel" type="Label" parent="DebugHUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("27_gxtfn")

[node name="FileDialog" type="FileDialog" parent="DebugHUD"]
title = "Open a Directory"
initial_position = 1
visible = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
script = ExtResource("34_8ool0")

[node name="GemSelector" type="OptionButton" parent="DebugHUD"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0
script = ExtResource("26_bhx41")

[node name="GemPositioner" type="Node2D" parent="DebugHUD"]
visible = false

[node name="ShiftXSlider" type="HSlider" parent="DebugHUD/GemPositioner"]
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("27_qnb83")

[node name="ShiftXLabel" type="Label" parent="DebugHUD/GemPositioner"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("28_sww3w")

[node name="ShiftYSlider" type="HSlider" parent="DebugHUD/GemPositioner"]
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("29_wljb1")

[node name="ShiftYLabel" type="Label" parent="DebugHUD/GemPositioner"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("30_v2yb1")

[node name="ScaleSlider" type="HSlider" parent="DebugHUD/GemPositioner"]
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("31_js0lu")

[node name="ScaleLabel" type="Label" parent="DebugHUD/GemPositioner"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("32_gxtfn")

[node name="BlendModeSelector" type="OptionButton" parent="DebugHUD/GemPositioner"]
offset_right = 32.0
offset_bottom = 20.0
script = ExtResource("43_458eo")

[node name="TintAlphaSlider" type="HSlider" parent="DebugHUD/GemPositioner"]
offset_right = 8.0
offset_bottom = 16.0
script = ExtResource("42_05nbr")

[node name="TintAlphaLabel" type="Label" parent="DebugHUD/GemPositioner"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("43_0sl42")

[node name="ReloadGemsButton" type="Button" parent="DebugHUD"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Reload gems..."
script = ExtResource("44_0sl42")

[connection signal="finished" from="AudioManager/SongAudioPlayer" to="AudioManager/SongAudioPlayer" method="_on_finished"]
